--- a/cancel.html
+++ b/cancel.html
@@ -1,4 +1,5 @@
-<!doctype html><meta charset="utf-8">
-<title>Payment canceled</title>
-<h1>❌ Payment canceled</h1>
-<p>No charge was made. You can safely close this page.</p>
+<!doctype html><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>已取消｜Cancelled</title>
+<h1>你已取消結帳｜Checkout Cancelled</h1>
+<p><b>中文：</b>若需要協助，請與我們聯繫。<br>
+<b>EN:</b> If you need assistance, please contact us.</p>
